fix header layout bug

--- a/assets/scss/layout/_header.scss
+++ b/assets/scss/layout/_header.scss
@@ -34,7 +34,7 @@ h1>a {
   
     a {
       text-align: center;
-      padding: 12px 60px;
+      padding: 12px 0px;
     }
   }
   @include sm{
